--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,7 @@
     <meta name="msapplication-tap-highlight" content="no" />
 
     <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Mooli:wght@700&display=swap"
-      rel="stylesheet"
-    />
+    <!-- Fuente Mooli eliminada por error de build -->
     <!-- add to homescreen for ios -->
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
